add small changes to template

--- a/frontend/template/scss/main.scss
+++ b/frontend/template/scss/main.scss
@@ -143,10 +143,10 @@ $responsiveType: 1;
 
 /* ========================= */
 
-@import "header.scss";
+@import "_header";
 
 /* ========================= */
 
-@import "footer.scss";
+@import "_footer";
 
 /* ========================= */
