add small changes to template

--- a/frontend/template/scss/main.scss
+++ b/frontend/template/scss/main.scss
@@ -80,7 +80,7 @@ $responsiveType: 1;
 
 /* ========================= */
 
-@import "null.scss";
+@import "_null";
 
 /* ========================= */
 
