--- a/frontend/template/scss/null.scss
+++ b/frontend/template/scss/null.scss
@@ -34,6 +34,7 @@ body {
     line-height: 1;
     font-size: $fontSize;
     font-family: $fontFamily;
+    background-color: $bgColor;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
