--- a/frontend/template/scss/main.scss
+++ b/frontend/template/scss/main.scss
@@ -39,7 +39,7 @@ $fontSize: rem(18);
 
 // main colors
 $mainColor: #fff;
-$greenColor: rgba(35, 177, 35, 1);
+$greenColor: #23b123;
 $bgColor: #263238;
 
 // min screen width
@@ -66,27 +66,30 @@ $responsiveType: 1;
 
 // mixins
 
-@mixin adaptiveValue($property, $startSize, $minSize, $startWidth: 0, $endWidth: 0, $type: 0) {
+@mixin adaptiveValue($property, $startSize, $minSize, $startWidth: -1, $endWidth: -1, $keepSize: -1) {
     $addSize: $startSize - $minSize;
-    @if $type==1 {
-        // < container
+    @if ($endWidth==-1) {
+        $endWidth: 320;
+    }
+    @if ($startWidth==-1) {
+        $startWidth: $maxWidth;
+    }
+    @if ($keepSize==1) {
         #{$property}: $startSize + px;
-        @media (max-width: #{$maxWidthContainer + px}) {
-            #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
+        @media (max-width: #{$startWidth + px}) {
+            #{$property}: calc(
+                #{$minSize + px} + #{$addSize} * ((100vw - #{$endWidth + px}) / #{$startWidth - $endWidth})
+            );
         }
-    } @else if $type==2 {
-        // > container
+    } @else if ($keepSize==2) {
         #{$property}: $startSize + px;
-        @media (min-width: #{$maxWidthContainer + px}) {
-            #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+        @media (max-width: #{$startWidth + px}) and (min-width: #{$endWidth + px}) {
+            #{$property}: calc(
+                #{$minSize + px} + #{$addSize} * ((100vw - #{$endWidth + px}) / #{$startWidth - $endWidth})
+            );
         }
     } @else {
-        // always
-        @if ($startWidth>0 and $endWidth>0) {
-            #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - #{$endWidth + px}) / #{$startWidth - 320}));
-        } @else {
-            #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
-        }
+        #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - #{$endWidth + px}) / #{$startWidth - $endWidth}));
     }
 }
 
