--- a/frontend/template/scss/main.scss
+++ b/frontend/template/scss/main.scss
@@ -34,7 +34,7 @@
 // constants
 
 // default font
-$fontFamily: "Ubuntu", sans-serif;
+$fontFamily: "League Spartan", sans-serif;
 $fontSize: rem(18);
 
 // main colors
@@ -134,6 +134,14 @@ $responsiveType: 1;
     }
 }
 
+/* ========================= */
+
+@import "_header";
+
+/* ========================= */
+
+// common
+
 .wrapper {
     min-height: 100%;
     display: flex;
@@ -144,10 +152,6 @@ $responsiveType: 1;
 .page {
     flex: 1 1 auto;
 }
-
-/* ========================= */
-
-@import "_header";
 
 /* ========================= */
 
